--- a/css/custom.css
+++ b/css/custom.css
@@ -18,8 +18,19 @@ body.barber_version #sidebar-wrapper {
   font-size: 14px;
   font-weight: 400;
 }
+.service-widget .post-media {
+  height: 400px;
+}
 .service-widget .post-media img {
-  width: 300px;
-  height: 320px;
+  min-width: 300px;
+  height: 100%;
+  min-height: 320px;
+  object-fit: cover;
+}
+
+.testimonial img {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
   object-fit: cover;
 }
