--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,15 @@
 body.barber_version #sidebar-wrapper {
   overflow-x: hidden;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase !important;
+  zoom: 0.9;
+}
 
 .logo-sidebar img {
   zoom: 0.5;
@@ -18,13 +27,19 @@ body.barber_version #sidebar-wrapper {
   font-size: 14px;
   font-weight: 400;
 }
-.service-widget .post-media {
+/* .service-widget .post-media {
   height: 400px;
 }
 .service-widget .post-media img {
   width: 95%;
   height: 100%;
   min-height: 320px;
+  object-fit: cover;
+} */
+
+.img-responsive {
+  width: 297px;
+  height: 200px;
   object-fit: cover;
 }
 
@@ -60,4 +75,8 @@ body.barber_version #sidebar-wrapper {
 }
 hr.grd1 {
   border-top: none;
+}
+
+.btn-sm {
+  zoom: 0.8;
 }
