preloader retirado em todas as paginas

--- a/css/custom.css
+++ b/css/custom.css
@@ -80,3 +80,26 @@ hr.grd1 {
 .btn-sm {
   zoom: 0.8;
 }
+
+.social-up-hover .footer-social {
+  zoom: 0.8;
+}
+
+@keyframes spinner-border {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-border {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: text-bottom;
+  border: 0.25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border 0.75s linear infinite;
+  animation: spinner-border 0.75s linear infinite;
+}
