--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,11 @@ h4,
 h5,
 h6 {
   text-transform: uppercase !important;
+  line-height: 1.25 !important;
   zoom: 0.9;
+}
+body.barber_version .section-title h3 {
+  line-height: 1.25 !important;
 }
 
 .logo-sidebar img {
@@ -83,4 +87,36 @@ hr.grd1 {
 
 .social-up-hover .footer-social {
   zoom: 0.8;
+}
+
+.titulo-destaque i {
+  color: #bb9d52;
+}
+
+.form-control,
+.btn-group.bootstrap-select {
+  transition: box-shadow 0.15s ease;
+  padding: 24px;
+  border: 0;
+  outline: none;
+  margin: 10px 0px;
+  box-shadow: 0 1px 3px rgba(50, 50, 93, 0.15), 0 1px 0 rgba(0, 0, 0, 0.02);
+}
+.form-control:focus,
+.selectpicker {
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.btn-group.bootstrap-select {
+  padding: 12px;
+  padding-left: 24px;
+  border-radius: 4px;
+}
+.btn-group.bootstrap-select * {
+  outline: none !important;
+}
+.btn-group.bootstrap-select .filter-option.pull-left {
+  font-size: 16px;
+  color: rgba(85, 85, 85, 0.661);
+  font-weight: 600;
 }
