--- a/style.css
+++ b/style.css
@@ -1874,12 +1874,12 @@ select.mobile-device {
 
 .contact_form {
     border: 1px solid #ededed;
-    box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1);
-    background-color: #f2f3f5;
+    /* box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1); */
+    /* background-color: #f2f3f5; */
     padding: 40px 30px;
 }
 
-.contact_form .form-control {
+/* .contact_form .form-control {
     background-color: #fff;
     margin-bottom: 30px;
     border: 1px solid #ebebeb;
@@ -1911,7 +1911,7 @@ select.mobile-device {
 
 .contact_form .form-control::-ms-input-placeholder {
     color: #bcbcbc;
-}
+} */
 
 #contact {
     background: url(images/bg.png) no-repeat center center #fff;
