--- a/css/custom.css
+++ b/css/custom.css
@@ -120,3 +120,9 @@ hr.grd1 {
   color: rgba(85, 85, 85, 0.661);
   font-weight: 600;
 }
+
+.form-contact-title {
+  font-weight: 700;
+  text-align: center;
+  color: #333;
+}
