--- a/css/custom.css
+++ b/css/custom.css
@@ -108,8 +108,8 @@ hr.grd1 {
 }
 
 .btn-group.bootstrap-select {
-  padding: 12px;
-  padding-left: 24px;
+  padding: 12px 24px;
+
   border-radius: 4px;
 }
 .btn-group.bootstrap-select * {
