--- a/css/versions.css
+++ b/css/versions.css
@@ -30,7 +30,7 @@ body.barber_version .navbar-nav span {
 }
 
 body.barber_version .sidebar-nav li:hover a {
-  background: #7e4576;
+  background: #b80509;
   color: #ffffff;
 }
 
@@ -38,7 +38,7 @@ body.barber_version .lead strong,
 body.barber_version .icon-wrapper:hover a,
 body.barber_version a:hover,
 body.barber_version a:focus {
-  color: #7e4576;
+  color: #b80509;
 }
 
 /**************************************
@@ -51,7 +51,7 @@ body.barber_version .nav-pills > li.active > a:focus,
 body.barber_version .nav-pills > li.active > a:hover,
 body.barber_version .icon-wrapper:hover i {
   color: #ffffff;
-  background: #7e4576;
+  background: #b80509;
 }
 
 body.barber_version .grd1 {
@@ -81,15 +81,15 @@ body.barber_version .icon-wrapper:hover i:hover {
 body.barber_version .grd1:hover,
 body.barber_version .grd1:focus {
   color: #ffffff;
-  background: #7e4576;
+  background: #b80509;
 }
 
 body.barber_version .cac:hover {
-  background: #7e4576;
+  background: #b80509;
 }
 
 body.barber_version .effect-1:after {
-  box-shadow: 0 0 0 2px #7e4576;
+  box-shadow: 0 0 0 2px #b80509;
 }
 
 body.barber_version {
@@ -117,7 +117,7 @@ body.barber_version .menuopener {
   position: absolute;
   top: 15px;
   left: 15px;
-  background-color: #7e4576;
+  background-color: #b80509;
   z-index: 111;
   color: #fff !important;
   width: 50px;
@@ -177,7 +177,7 @@ body.barber_version .contact_form .btn {
 }
 
 body.barber_version .contact_form .btn.subt {
-  background: #7e4576;
+  background: #b80509;
 }
 
 body.barber_version .section.db,
