--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 /** ADD YOUR AWESOME CODES HERE **/
-/* @import url("./bootstrap3+++4.css"); */
+@import url("./helpers.css");
 :root {
   /* #b80509 */
   --cor-principal: #b80509;
