--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 /** ADD YOUR AWESOME CODES HERE **/
-@import url("./helpers.css");
+/* @import url("./helpers.css"); */
 :root {
   /* #b80509 */
   --cor-principal: #b80509;
@@ -336,5 +336,11 @@ hr.grd1 {
   }
   .d-md-block {
     display: inline;
+  }
+}
+
+@media (min-width: 1100px) {
+  .d-xl-block {
+    display: block;
   }
 }
