--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,18 @@ body.barber_version .section-title h3 {
   object-fit: cover;
 } */
 
+.hoverbutton {
+  z-index: 100;
+  zoom: 0.7;
+  /* opacity: 1; */
+}
+.widget .post-media:hover .hoverbutton {
+  /* position: absolute;
+  top: 10px;
+  right: 10px; */
+  opacity: 1;
+}
+
 .img-responsive {
   width: 297px;
   height: 200px;
