--- a/css/custom.css
+++ b/css/custom.css
@@ -54,9 +54,16 @@ body.barber_version .section-title h3 {
 .hoverbutton {
   z-index: 100;
   zoom: 0.7;
-  /* opacity: 1; */
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  margin-top: 0px;
+  margin-right: 0px;
+  color: #f0f0f0 !important;
+  background-color: var(--cor-principal);
 }
-.widget .post-media:hover .hoverbutton {
+.widget .post-media:hover .hoverbutton,
+.widget:hover .hoverbutton {
   /* position: absolute;
   top: 10px;
   right: 10px; */
