--- a/css/custom.css
+++ b/css/custom.css
@@ -378,6 +378,10 @@ hr.grd1 {
   max-width: 600px;
   margin: 0 auto;
 }
+.about-tab .tab-content > .tab-pane {
+  padding: 40px 20px;
+  padding-bottom: 0px;
+}
 .about-tab .tab-content > .tab-pane ul {
   text-align: left;
 }
