--- a/style.css
+++ b/style.css
@@ -459,7 +459,7 @@ li.social-links a {
 }
 
 body.barber_version .sidebar-nav li a.active {
-  background: #b80509;
+  background: #e31e22;
   color: #ffffff;
 }
 
@@ -496,7 +496,7 @@ body.barber_version .sidebar-nav li a.active {
 }
 
 #full-width .owl-dots .owl-dot.active span {
-  background: #b80509;
+  background: #e31e22;
 }
 
 /*------------------------------------------------------------------
@@ -998,7 +998,7 @@ body.barber_version .about-tab .nav-tabs > li a:hover {
 }
 .about-tab .nav-tabs > li.active > a {
   border: none;
-  background: #b80509;
+  background: #e31e22;
   color: #ffffff;
 } */
 
@@ -2100,7 +2100,7 @@ select.mobile-device {
 }
 
 .footer-distributed .footer-company-name a:hover {
-  color: #b80509;
+  color: #e31e22;
 }
 
 /*------------------------------------------------------------------
@@ -2185,7 +2185,7 @@ select.mobile-device {
   right: 0;
   bottom: 0;
   left: 0;
-  background: #b80509;
+  background: #e31e22;
   z-index: 11000;
   position: fixed;
   display: block;
@@ -2294,7 +2294,7 @@ select.mobile-device {
 }
 
 .all-page-bar .title .breadcrumb .active {
-  color: #b80509;
+  color: #e31e22;
 }
 
 body.barber_version .service-wrap:hover {
@@ -2339,7 +2339,7 @@ body.barber_version .service-wrap:hover {
     #111 99%,
     #111121 100%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+,
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#b80509',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#e31e22',GradientType=0 ); /* IE6-9 */
 }
 
 body.barber_version .dev-list .widget:hover .hover-br .social-up-hover {
@@ -2374,7 +2374,7 @@ body.barber_version
 
 .appointment-left h2 {
   font-size: 38px;
-  color: #b80509;
+  color: #e31e22;
   font-weight: 700;
 }
 
