--- a/css/custom.css
+++ b/css/custom.css
@@ -546,3 +546,14 @@ body.barber_version .sidebar-nav li a:hover {
 #grd1-testimonials {
   background-color: var(--cor-principal);
 }
+
+@media (min-width: 990px) {
+  body.barber_version .dev-list .widget {
+    height: 340px;
+  }
+}
+@media (max-width: 990px) {
+  body.barber_version .dev-list .img-responsive {
+    height: 340px;
+  }
+}
