--- a/css/custom.css
+++ b/css/custom.css
@@ -495,7 +495,11 @@ hr.grd1 {
 .iframe-youtube {
   width: 100%;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 0px auto;
+  padding-top: 30px;
+}
+.iframe-youtube .message-box {
+  margin-bottom: 30px;
 }
 .container-fluid {
   padding: auto 10px;
